--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1"
-  }
+  },
+  "scripts": {
+  "build": "npm run build"
+}
+
 }
